--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "body-parser": "^1.20.0",
         "express": "^4.18.1",
-        "mongodb": "^4.5.0"
+        "mongodb": "^4.5.0",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.19"
